--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,7 @@ fabric.properties
 [Ss]cripts
 pyvenv.cfg
 .venv
+**/venv
 pip-selfcheck.json
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,venv
