--- a/.gitignore
+++ b/.gitignore
@@ -122,4 +122,5 @@ pip-selfcheck.json
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,venv
 
-
+#Genius Token
+/genius_token.txt
