--- a/spacy/base_config.cfg
+++ b/spacy/base_config.cfg
@@ -2,8 +2,8 @@
 # you can run spacy init fill-config to auto-fill all default settings:
 # python -m spacy init fill-config ./base_config.cfg ./config.cfg
 [paths]
-train = "data/spacy/train.spacy"
-dev = "data/spacy/valid.spacy"
+train = "spacy/train.spacy"
+dev = "spacy/valid.spacy"
 
 [system]
 gpu_allocator = null
