--- a/spacy/output/model-best/config.cfg
+++ b/spacy/output/model-best/config.cfg
@@ -1,6 +1,6 @@
 [paths]
-train = "data/spacy/train.spacy"
-dev = "data/spacy/valid.spacy"
+train = "spacy/train.spacy"
+dev = "spacy/valid.spacy"
 vectors = null
 init_tok2vec = null
 
